fix(tokenSelect): fix issue where firefox was wrongly aligning the placeholder

--- a/src/containers/TokenSelect/TokenSelect.module.scss
+++ b/src/containers/TokenSelect/TokenSelect.module.scss
@@ -39,5 +39,9 @@
         border: none;
         font-size: 1.25rem;
         width: 5.625rem;
+
+        &::-moz-placeholder {
+            text-align: center;
+        }
     }
 }
